# CliqueEnum

./: CMakeLists.txt  README.md  readme _ENUM.md  readme.md
bitscan/: CMakeLists.txt  bbalg.h  bbintrinsic.h  bbintrinsic_sparse.h  bbsentinel.cpp  bbsentinel.h  bitboardn.cpp  bitboardn.h  bitboards.h  legal.txt  readme.md
copt/: CMakeLists.txt  clique_sort.h  init_color.h  input.h
copt/batch/: batch_benchmark.h  batch_gen.h  benchmark_clique.cpp  benchmark_clique.h
copt/clique/: clique.h  clique_enum.h  clique_types.h
copt/common/: common_clq.h  common_macros.h
copt/data/: brock200_1.clq
copt/examples/: published_alg.cpp
graph/: CMakeLists.txt  graph.h  graph_gen.h  kcore.h  legal.txt  readme.md  simple_fixed_ugraph.h  simple_graph.h  simple_ugraph.h
graph/algorithms/: decode.h  degree_ugraph.h  filter_graph_sort_type.h  graph_conversions.h  graph_func.h  graph_map.h  graph_sort.h
graph/draw/: ldraw.cpp  ldraw.h  lutils.h
graph/examples/: gwin_main.cpp  lb_kcore.cpp
tclap/: CMakeLists.txt  CmdLine.h  README.md
tclap/tests/: test18.out
utils/: CMakeLists.txt  batch.h  benchmark.cpp  benchmark.h  common.h  file.h  logger.cpp  logger.h  prec_timer.h  result.cpp  result.h  test_analyser.cpp  test_analyser.h  thread.h
utils/tests/: test_batch.cpp  test_benchmark.cpp  test_common.cpp  test_file.cpp  test_logger.cpp  test_result.cpp  test_stress_timer.cpp  test_tanal.cpp  test_thread.cpp
